[package]
name = "pogo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres"]}
serde = {version = "1.0"}
rocket = {version = "0.4"}
tokio = {version = "1.24", features = ["full"]}
lazy_static = "*"
